# code-review-agent

./: .env copy.example  .env.example  .gitignore  README.md  pyproject.toml
.github/prompts/: plan-codeReviewAgent.prompt.md
app/: config.py  main.py
app/models/: schemas.py
app/routers/: review.py
app/services/: azure_openai_service.py  azure_search_service.py  github_service.py  review_service.py
app/utils/: diff_parser.py
scripts/: setup_ai_search.py
standards/1-corporate/: corp-api-error-handling.md  corp-external-call-resilience.md  corp-logging-pii-mask.md
standards/2-team/: team-backend-async-io.md  team-backend-fastapi-style.md  team-backend-testability.md
standards/3-repository/: repo-azure-search-retrieval.md  repo-env-config-validation.md  repo-review-line-accuracy.md
standards/4-file-history/: file-history-azure-search-service.md  file-history-review-service-query.md  file-history-setup-script-idempotent.md
standards/5-postmortem/: postmortem-pm-2025-09-token-leak.md  postmortem-pm-2025-11-search-timeout.md  postmortem-pm-2026-01-diff-line-mismatch.md
